# specto

./: .gitignore  README.md  package.json
.github/workflows/: release-desktop.yml  release.yml
apps/desktop/: .env.example  package.json
apps/desktop/scripts/: generate-icons.ts  sync-version.js
apps/desktop/src/: app.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: auth-guard.tsx  error-boundary.tsx  layout.tsx  offline-indicator.tsx
apps/desktop/src/hooks/: use-network-status.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: dashboard.tsx  leaderboard.tsx  organization.tsx  settings.tsx
apps/desktop/src/stores/: github.ts  license.ts  theme.ts
apps/web/: .env.example  next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/export/: route.ts
apps/web/app/api/leaderboard/: route.ts
apps/web/app/api/license/validate/: route.ts
apps/web/app/api/webhook/polar/: route.ts
apps/web/app/downloads/: page.tsx
apps/web/app/leaderboard/: page.tsx
apps/web/app/success/: page.tsx
apps/web/components/: hero-leaderboard.tsx
apps/web/components/layout/: index.ts
apps/web/components/layout/footer/: footer.module.css  index.tsx
apps/web/components/layout/header/: header.module.css  index.tsx  mobile-nav.tsx
apps/web/components/layout/wrapper/: index.tsx
apps/web/components/logo/: index.tsx
apps/web/lib/: config.ts  github.ts
tests/: auth.test.ts  client.test.ts  date.test.ts  errors.test.ts  table.test.ts
