[package]
name = "specto-desktop"
version = "1.1.0"
description = "GitHub organization metrics dashboard"
authors = ["Darkroom Engineering <hi@darkroom.engineering>"]
license = "MIT"
repository = "https://github.com/darkroomengineering/specto"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

